# mango-template

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: ci.yml
src/: BUILD.bazel  lib.c  lib.h  main.c
tests/: BUILD.bazel  lib_test.cpp
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
