# Root BUILD file for mango-PROJECT_NAME

load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

# Export configuration files
exports_files([
    "MODULE.bazel",
    ".bazelrc",
])

# Add package-level visibility defaults if needed
# package(default_visibility = ["//visibility:public"])

# Generate compile_commands.json for C++ IDE support
refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//src/...": "",
        "//tests/...": "",
    },
    exclude_external_sources = True,
)
