"""Bazel module configuration for mango-PROJECT_NAME."""

module(
    name = "mango-PROJECT_NAME",
    version = "0.1.0",
)

# ============================================================================
# Core Build Rules
# ============================================================================

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# ============================================================================
# Testing
# ============================================================================

bazel_dep(name = "googletest", version = "1.15.2")

# ============================================================================
# Common Dependencies (uncomment as needed)
# ============================================================================

# Logging
# bazel_dep(name = "spdlog", version = "1.15.3")

# Configuration parsing
# bazel_dep(name = "yaml-cpp", version = "0.8.0")

# Serialization
# bazel_dep(name = "protobuf", version = "29.3")
# bazel_dep(name = "flatbuffers", version = "25.2.10")

# Messaging
# bazel_dep(name = "libzmq", version = "4.3.5")
# bazel_dep(name = "cppzmq", version = "4.10.0")

# ============================================================================
# C++ Toolchain
# ============================================================================

register_toolchains("//toolchain:cc_toolchain_for_k8")

# ============================================================================
# Development Tools
# ============================================================================

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)
