# C++ Toolchain for mango-PROJECT_NAME
#
# GCC 14+ toolchain with:
# - C++23 standard (-std=c++23)
# - C11 for C files (-std=c11)
# - Warning flags and -Werror
# - Baseline x86-64 ISA for portable binaries
#
# Usage:
#   bazel build //...    # Uses this toolchain

load(":cc_toolchain_config.bzl", "cc_toolchain_config")

package(default_visibility = ["//visibility:public"])

# =============================================================================
# GCC Toolchain
# =============================================================================

cc_toolchain_config(name = "cc_toolchain_config")

cc_toolchain(
    name = "cc_toolchain_impl",
    toolchain_identifier = "mango-toolchain",
    toolchain_config = ":cc_toolchain_config",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
)

toolchain(
    name = "cc_toolchain_for_k8",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":cc_toolchain_impl",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

# =============================================================================
# Shared resources
# =============================================================================

filegroup(name = "empty")
